--- a/templates/home.html
+++ b/templates/home.html
@@ -71,7 +71,9 @@
 
     <!-- Header Section -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand" href="#">Cynet</a>
+    <a class="navbar-brand" href="#">
+    <img src="https://i.ibb.co/B3T6hfR/logk.png" alt="Cynet Logo" style="height: 60px; width: auto;">
+</a>
     <div class="collapse navbar-collapse justify-content-end">
         <ul class="navbar-nav">
             <li class="nav-item">
